# backend/src/Routes/functRoutes.ts
@@ -4,6 +4,7 @@ import {
   getAllPlans,
   getAllStream,
   getRoleType,
+  getAllPaymentMethod,
 } from "../Controller/functController";
 
 const router = express.Router();
@@ -12,5 +13,6 @@ router.route("/getRoleType").get(getRoleType);
 router.route("/getAllPlans").get(getAllPlans);
 router.route("/getAllMembership").get(getAllMembership);
 router.route("/getAllStream").get(getAllStream);
+router.route("/getAllPaymentMethod").get(getAllPaymentMethod);
 
 export default router;
